
===========
Changes log
===========

- @version-full@ (@release-date@)
    - Bugs fixed
      - Allow parsing of double values like "2.0" or "4.0" being received in
        the Retry-After header. Issue #1355.
        Reported by Brett Cooper.

- 2.4.2 (11/13/2019)
    - Misc
      - Prepare the next release (2.5.0). The Apache HTTP Client extension is
      not deprecated anymore, while the EMF, JAX-RS, OAuth, OpenID and RAML
      extensions are deprecated before their removal.
      Issue #1347.
      - Eclipse p2 update site won't be maintained anymore and will be stopped
      before the end of november 2019. There is no impact on the Maven
      repository.
- 2.4.1 (08/22/2018)
    - Bugs fixed
      - Make sure the Jetty server has released all resources when it fails to start. Issue #1311.
        Reported by primosK.
    - Misc
      - Upgraded Apache Solr dependency to 7.4.0 in order to prevent security issues
        (CVE-2015-8797, CVE-2018-1308, CVE-2015-8795, CVE-2015-8796, CVE-2014-3628, CVE-2017-3163).
        Issue #1331.
      - Upgraded Apache commons HttpClient dependency to 4.5.6 in order to prevent security issues
        (CVE-2014-3577, CVE-2015-5262, CVE-2014-3577).
        Issue #1330.
      - Upgraded Jackson dependency to 2.9.6 in order to prevent security issues
        (CVE-2017-15095, CVE-2017-17485, CVE-2017-7525, CVE-2018-7489, CVE-2018-5968,
        CVE-2016-7051, CVE-2016-3720).
        Issue #1329.
      - Upgraded commons-collections dependency to 3.2.2 in order to prevent security issues
        (CVE-2015-6420, CVE-2017-15708).
        Issue #1328.
      - Upgraded Spring dependency to 3.2.8.RELEASE in order to prevent security issues
        (CVE-2014-1904, CVE-2014-0054, CVE-2018-1271, CVE-2018-1270, CVE-2014-0225, CVE-2015-5211,
        CVE-2015-3192, CVE-2016-5007, CVE-2016-9878, CVE-2018-1272, CVE-2014-3578, CVE-2014-3625).
        Issue #1327.