@@ -24,7 +24,6 @@
 
 package org.restlet.engine.header;
 
-import org.junit.Assert;
 import org.junit.Test;
 import org.restlet.Request;
 import org.restlet.Response;
